--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "gulpfile.js",
     "dependencies": {
         "@popperjs/core": "^2.11.5",
+        "aos": "^2.3.4",
         "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.10",
         "gulp": "^4.0.2",
